--- a/app/src/main/res/layout/activity_night_turn.xml
+++ b/app/src/main/res/layout/activity_night_turn.xml
@@ -6,7 +6,7 @@
     android:screenOrientation="portrait"
     tools:context="doistres.werewolf.NightTurnActivity">
 
-    <TextView android:text="Noite 1" android:layout_width="wrap_content"
+    <TextView android:text="Noite    1" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/night_turn"
         android:layout_marginTop="65dp"
@@ -14,6 +14,48 @@
         android:textColor="#ffffffff"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Turno do Lobisomem"
+        android:id="@+id/text_class_turn"
+        android:textColor="#ffffffff"
+        android:textSize="48dp"
+        android:layout_below="@+id/night_turn"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:layout_marginTop="93dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Peça para que os lobisomens acordem e se conheçam"
+        android:id="@+id/text_class_objective"
+        android:textColor="#ffffffff"
+        android:gravity="center"
+        android:layout_below="@+id/text_class_turn"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="48dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Próxima classe >"
+        android:id="@+id/button_next_class"
+        android:textSize="36dp"
+        android:background="@android:color/transparent"
+        android:onClick="getNextClass"
+        android:textColor="#ffffffff"
+        android:layout_gravity="center_horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:gravity="bottom"
+        android:longClickable="false" />
 
 
 </RelativeLayout>
